scraper/tests/trybuild/default_no_redfish_adapter.rs
use nv_redfish_scraper::adapter::redfish::BmcId;

fn main() {
    let _ = BmcId::new("bmc");
}
